// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Highlight /> should render <Highlight> treating regex patterns as text 1`] = `
<span>
  <span
    key="0"
  >
    Hello 
  </span>
  <styled.span
    key="1"
  >
    (?)
  </styled.span>
  <span
    key="2"
  >
    World!
  </span>
</span>
`;

exports[`<Highlight /> should render <Highlight> with background color on search term 1`] = `
<Fragment>
  <span
    key="0"
  >
    Hello 
  </span>
  <styled.span
    key="1"
  >
    World
  </styled.span>
  <span
    key="2"
  >
    !
  </span>
</Fragment>
`;

exports[`<Highlight /> should render <Highlight> with exact match on case 1`] = `
<span>
  <span
    key="0"
  >
    Hello 
  </span>
  <styled.span
    key="1"
  >
    World
  </styled.span>
  <span
    key="2"
  >
    !
  </span>
</span>
`;

exports[`<Highlight /> should render <Highlight> with no exact match on case 1`] = `
<span>
  <span
    key="0"
  >
    Hello World!
  </span>
</span>
`;

exports[`<Highlight /> should render <Highlight> with no matched search term 1`] = `
<span>
  <span
    key="0"
  >
    Hello World!
  </span>
</span>
`;
